Fix login and registration page not showing form errors
When user tried to registrate or login and there was an error the page did not show to the user the reason because the page was static and not using the form object from context.

--- a/resources/css/app/accounts.css
+++ b/resources/css/app/accounts.css
@@ -62,3 +62,9 @@
 .accounts-facebook-signin {
   margin-bottom: 20px;
 }
+
+@media only screen and (max-width: 500px) {
+    .add-space-mobile {
+        padding-top: 30px;
+    }
+}
